--- a/src/WebUi/WebUi.csproj
+++ b/src/WebUi/WebUi.csproj
@@ -160,6 +160,7 @@
     <Compile Include="DependencyResolution\IoC.cs" />
     <Compile Include="DependencyResolution\StructureMapDependencyScope.cs" />
     <Compile Include="DependencyResolution\StructureMapScopeModule.cs" />
+    <Compile Include="Features\Error\ErrorController.cs" />
     <Compile Include="Features\Home\ErrorsHandler.cs" />
     <Compile Include="Features\Home\ErrorsRequest.cs" />
     <Compile Include="Features\Home\ErrorsResponse.cs" />
@@ -202,6 +203,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Features\Shared\Error.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Features\Error\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
