--- a/src/WebUi/packages.config
+++ b/src/WebUi/packages.config
@@ -16,6 +16,7 @@
   <package id="structuremap" version="3.1.1.134" targetFramework="net451" />
   <package id="StructureMap.MVC5" version="3.1.1.134" targetFramework="net451" />
   <package id="structuremap.web" version="3.1.0.133" targetFramework="net451" />
+  <package id="T4Config" version="1.0.4.4" targetFramework="net451" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
