--- a/src/WebUi/packages.config
+++ b/src/WebUi/packages.config
@@ -16,6 +16,9 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net451" />
+  <package id="Serilog" version="1.5.6" targetFramework="net451" />
+  <package id="Serilog.Sinks.MSSqlServer" version="2.0.7" targetFramework="net451" />
+  <package id="SerilogWeb.Classic" version="1.0.1" targetFramework="net451" />
   <package id="structuremap" version="3.1.1.134" targetFramework="net451" />
   <package id="StructureMap.MVC5" version="3.1.1.134" targetFramework="net451" />
   <package id="structuremap.web" version="3.1.0.133" targetFramework="net451" />
