updated the pipelines to log within a set context.

--- a/src/WebUi/Web.config
+++ b/src/WebUi/Web.config
@@ -14,7 +14,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="LogTableName" value="StructuredLog" />
-    <add key="serilog:minimum-level" value="Verbose" />
+    <add key="serilog:minimum-level" value="Warning" />
+    <add key="serilog:minimum-level" value="Warning" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
