--- a/src/WebUi/Web.config
+++ b/src/WebUi/Web.config
@@ -4,18 +4,21 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-
-  <connectionStrings>  <add name="LoggingDb" connectionString="data source=localhost;initial catalog=LogDatabase;Integrated Security=True;Pooling=False;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
   
+
+  <connectionStrings>
+    <add name="LoggingDb" connectionString="data source=localhost;initial catalog=LogDatabase;Integrated Security=True;Pooling=False;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!-- SeriLog -->
     <add key="LogTableName" value="StructuredLog" />
-    <add key="serilog:minimum-level" value="Warning" />
-    <add key="serilog:minimum-level" value="Warning" />
+    <add key="serilog:minimum-level" value="Debug" />
+    <add key="serilog:enrich:with-property:ApplicationName" value="Web Application UI" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -49,4 +52,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  
 </configuration>
