dictionary displayed in grid for props

--- a/src/WebUi/WebUi.csproj
+++ b/src/WebUi/WebUi.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Infrastructure\Pipelines\RequestPipeline.cs" />
     <Compile Include="Infrastructure\Utility\ReflectionExtension.cs" />
     <Compile Include="Infrastructure\Utility\ReflectionHelper.cs" />
+    <Compile Include="Infrastructure\Utility\StringExtensions.cs" />
     <Compile Include="Infrastructure\Validation\FluentValidationMessageResourceProvider.cs" />
     <Compile Include="Infrastructure\Validation\FluentValidationMessageValidator.cs" />
     <Compile Include="Infrastructure\Validation\IMessageValidator.cs" />
